--- a/view/frontend/templates/script.phtml
+++ b/view/frontend/templates/script.phtml
@@ -25,6 +25,7 @@ $clientId = $viewModel->getClientId();
      data-client_id="<?= /** @noEscape  */ $clientId ?>"
      data-login_uri="<?= /** @noEscape  */ $postAuthUrl ?>"
      data-form_key="<?= /** @noEscape  */ $formKey ?>"
+     data-use_fedcm_for_prompt="true"
      data-auto_prompt="false"
      data-context="use">
 </div>
