--- a/view/frontend/templates/button/google.phtml
+++ b/view/frontend/templates/button/google.phtml
@@ -18,4 +18,7 @@ use Magento\Framework\View\Element\Template;
      data-theme="outline"
      data-text="continue_with"
      data-size="large">
+    <img src="<?= $block->getViewFileUrl('Collab_GoogleOneTap::images/g-logo.svg') ?>"
+         class="g_id_signin_placeholder"
+         alt="<?= /** noEscape */__('Google One Tap Login'); ?>"/>
 </div>
