--- a/view/frontend/templates/script.phtml
+++ b/view/frontend/templates/script.phtml
@@ -33,7 +33,19 @@ $clientId = $viewModel->getClientId();
 
 <?php
 $scriptString = <<<SCRIPT
-(t=>{let n=e=>{t.forEach(e=>window.removeEventListener(e,n)),element=document.createElement("script"),scriptTag=document.getElementsByTagName("script")[0],element.async=!0,element.src="https://accounts.google.com/gsi/client",scriptTag.parentNode.insertBefore(element,scriptTag)};t.forEach(e=>window.addEventListener(e,n,{once:!0,passive:!0}))})(["load"]);
+(events => {
+    const loadOneTapJs = (e) => {
+        events.forEach(type => window.removeEventListener(type, loadOneTapJs))
+        element = document.createElement('script');
+        scriptTag = document.getElementsByTagName('script')[0];
+
+        element.async = true;
+        element.src = 'https://accounts.google.com/gsi/client';
+
+        scriptTag.parentNode.insertBefore(element, scriptTag);
+    };
+    events.forEach(type => window.addEventListener(type, loadOneTapJs, {once: true, passive: true}))
+})(['load']);
 SCRIPT;
 ?>
 
